examples/gallery/errors/governance_malformed_business.fsl
// SPDX-License-Identifier: Apache-2.0

business Broken {
